--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
-# Degree
+# Degree 90
 - degree: Full Stack Webdeveloper Nanodegree  
   uni: Udacity
   year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+  # awards: 20
+  # summary: 34
